package rs.ftn.studenteaseteam.studentease.bean;

public class Grade {
}
