package rs.ftn.studenteaseteam.studentease.bean;

import jakarta.persistence.*;
import lombok.Getter;
import lombok.Setter;
import java.util.Collection;
import java.util.List;
import java.util.UUID;

@Entity
@Getter
@Setter
public class Professor extends AbstractUser {
    @Id
    @GeneratedValue
    public UUID id;

    @ManyToMany(fetch = FetchType.EAGER)
    @JoinTable(name = "professor_roles",
            joinColumns = @JoinColumn(name = "professor_id", referencedColumnName = "id"),
            inverseJoinColumns = @JoinColumn(name = "role_id", referencedColumnName = "id"))
    private List<Role> roles;

    public Professor(){
        userRole = UserRole.PROFESSOR;
    }

    @Override
    public Collection<Role> getAuthorities() {
        return roles;
    }
}
